@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1691 2004/05/02 17:50:05 xtraeme Exp $
+$NetBSD: TODO,v 1.1692 2004/05/02 18:40:24 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -148,7 +148,6 @@ Suggested package updates
 	o balsa-1.4.4
 	o bidwatcher-1.3.15
 	o bind-9.3
-	o bluefish-0.13
 	o boehm-gc-6.3alpha2
 	o bogofilter-0.17.5
 	o boost-1.31.0
