@@ -1,12 +1,13 @@
-@comment $NetBSD: PLIST,v 1.8 2003/12/03 03:50:15 xtraeme Exp $
+@comment $NetBSD: PLIST,v 1.9 2004/05/02 18:40:24 xtraeme Exp $
 bin/bluefish
-share/applications/bluefish.desktop
 share/bluefish/bluefish_splash.png
 share/bluefish/custom_menu.default
 share/bluefish/encodings.default
 share/bluefish/filetypes.default
+share/bluefish/funcref_css.xml
 share/bluefish/funcref_html.xml
 share/bluefish/funcref_php.xml
+share/bluefish/funcref_python.xml
 share/bluefish/highlighting.default
 share/bluefish/icon_c.png
 share/bluefish/icon_cfml.png
@@ -20,11 +21,13 @@ share/bluefish/icon_python.png
 share/bluefish/icon_r.png
 share/bluefish/icon_unknown.png
 share/bluefish/icon_xml.png
+${PKGLOCALEDIR}/locale/bg/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/cs/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/da/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/de/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/el/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/es/LC_MESSAGES/bluefish.mo
+${PKGLOCALEDIR}/locale/fi/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/fr/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/hu/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/it/LC_MESSAGES/bluefish.mo
@@ -32,9 +35,14 @@ ${PKGLOCALEDIR}/locale/ja/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/nl/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/no/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/pl/LC_MESSAGES/bluefish.mo
+${PKGLOCALEDIR}/locale/pt/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/pt_BR/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/ro/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/ru/LC_MESSAGES/bluefish.mo
+${PKGLOCALEDIR}/locale/sr/LC_MESSAGES/bluefish.mo
 ${PKGLOCALEDIR}/locale/sv/LC_MESSAGES/bluefish.mo
+${PKGLOCALEDIR}/locale/ta/LC_MESSAGES/bluefish.mo
+${PKGLOCALEDIR}/locale/zh_CN/LC_MESSAGES/bluefish.mo
 share/pixmaps/bluefish-icon.png
+@comment in xdg-dirs: @dirrm share/pixmaps
 @dirrm share/bluefish
